Fix crash when redoing creation of a colorize mask

Neither changing "Colorize Needs Update", nor running
KisColorizeStrokeStrategy should reset redo state.

BUG:424829